Performed an optimization.